# lzxparts

./: 10144517-081x0xxx.stp  README.md
components/: LZX Accessories.eli  LZX Analog Switches.eli  LZX Capacitors.eli  LZX Comparators.eli  LZX Components.eli  LZX Crystals.eli  LZX Diodes.eli  LZX Ferrite Beads.eli  LZX Hardware.eli  LZX Headers.eli  LZX Heat Sinks.eli  LZX Inductors.eli  LZX Jacks.eli  LZX Knobs & Caps.eli  LZX LEDs.eli  LZX Logic ICs.eli  LZX MCUs FPGAs.eli  LZX Op Amps.eli  LZX PCBs.eli  LZX Ports.eli  LZX Potentiometers.eli  LZX Sub Assemblies.eli  LZX Switches.eli  LZX Transistors.eli  LZX Trimmers.eli  LZX Voltage References.eli  LZX Voltage Regulators.eli  TL13-RGB.eli  core-parts.eli  ~LZX Components.eli~  ~LZX Jacks.eli~  ~LZX Logic ICs.eli~  ~LZX MCUs FPGAs.eli~
models/: 022284040.stp  10090929-S15.stp  10144517-041x0xlf.stp  10144517-043x0xxx.stp  10144517-061x0xxx.stp  10144517-062x0xxx.stp  10144517-063x0xxx.stp  10144517-064x0xxx.stp  10144518-041x0xxx.stp  10144518-043x0xxx.stp  10144518-044x0xxx.stp  10144518-061x0xxx.stp  10144518-062x0xxx.stp  10144518-063x0xxx.stp  10144518-084x0xxx.stp  103-5007-EV.ipt  103-5007-EV.stp  3362H001XXX0A.stp  3362M001XXX0A.stp  3362P001XXX0A.stp  357LB3I027M0000--3DModel-STEP-56544.STEP  36p-c.igs  449145403.stp  529910308.stp  6.3x5_Lead.stp  6N138S-TA1.STEP  7790--3DModel-STEP-32736.STEP  878311419.stp  878331419.stp  B3F_1050.step  (+35 more)
scripts/autohotkey/: CMakeLists.txt  export-pcb-10layers.ahk  export-pcb-2layers.ahk  export-pcb-4layers.ahk  export-pcb-6layers.ahk  export-pcb.ahk  pcbwizard.py
(+56 files in other folders)
